# fastapi-app-template

./: .flake8  README.md  pyproject.toml  run.py  runner.py
app/: main.py
tests/: conftest.py  test_main.py
