[tool.poetry]
name = "app"
version = "0.1.0"
description = "Base template for creating a FastAPI application"
authors = ["druizz90 <32929872+druizz90@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.960"
flake8 = "^4.0.1"
coverage = {extras = ["toml"], version = "^6.4.1"}
black = "^22.3.0"
httpx = "^0.23.0"
pytest-asyncio = "^0.18.3"
asgi-lifespan = "^1.0.1"
bandit = {extras = ["toml"], version = "^1.7.4"}

[tool.poetry.scripts]
poetry = "runner:run"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["app"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["app", "tests"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
target-version = ["py310"]
line-length = 119

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
